--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./https://github.com/Christinsujitha/Digital-portfolio-/blob/main/IMG-20230912-WA0005.jp.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./IMG-20230912-WA0005.jpg" alt="Your Profile Picture" class="profile-picture">
             <h4>CHRISTIAN SUJITHA.S</h4>
             <p>FINAL YEAR STUDENT</p>
         </div>
